[gd_scene load_steps=15 format=3 uid="uid://c1b4lwkd8g8ft"]

[ext_resource type="Script" uid="uid://ctxvc5gn37tpx" path="res://prefabs/vehicles/tank/vehicle_tank.gd" id="1_44ovr"]
[ext_resource type="Texture2D" uid="uid://bm40xph16eexn" path="res://addons/kenney_prototype_textures/dark/texture_08.png" id="2_fmk3b"]
[ext_resource type="Script" uid="uid://bnq863bon7ld1" path="res://prefabs/vehicles/tank/track_mesh01.gd" id="3_fmk3b"]
[ext_resource type="Texture2D" uid="uid://bga37c84q3ylk" path="res://addons/kenney_prototype_textures/green/texture_12.png" id="3_g5h54"]
[ext_resource type="Script" uid="uid://d3x5cl85v8vwv" path="res://prefabs/vehicles/tank/track_mesh02.gd" id="5_hrmtn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_for6x"]
size = Vector3(2, 1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_17id2"]
size = Vector3(2, 1, 2)

[sub_resource type="CylinderMesh" id="CylinderMesh_ybgag"]
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cr6q"]
albedo_texture = ExtResource("2_fmk3b")

[sub_resource type="ImmediateMesh" id="ImmediateMesh_g5h54"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrmtn"]
albedo_texture = ExtResource("3_g5h54")

[sub_resource type="Curve3D" id="Curve3D_fmk3b"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, -0.357812, 0.127827, 0, 0, 0, 0, 0, 0, 0, -0.355162, 0.406802, 0, 0, 0, 0, 0, 0, 0, -0.351956, 0.711326, 0, 0, 0, 0, 0, 0, 0, -0.364778, 1.09278, 0, 0, 0, 0, 0, 0, 0, -0.459627, 1.36587, 0, 0, 0, 0, 0, 0, 0, -0.601986, 1.54155, 0, 0, 0, 0, 0, 0, 0, -0.90651, 1.6281, 0, 0, 0, 0, 0, 0, 0, -1.11487, 1.59605, 0, 0, 0, 0, 0, 0, 0, -1.33605, 1.41013, 0, 0, 0, 0, 0, 0, 0, -1.43433, 1.11545, 0, 0, 0, 0, 0, 0, 0, -1.42792, 0.778873, 0, 0, 0, 0, 0, 0, 0, -1.4151, 0.362157, 0, 0, 0, 0, 0, 0, 0, -1.4151, -0.00327191, 0, 0, 0, 0, 0, 0, 0, -1.41189, -0.339851, 0, 0, 0, 0, 0, 0, 0, -1.41189, -0.660402, 0, 0, 0, 0, 0, 0, 0, -1.44715, -1.00339, 0, 0, 0, 0, 0, 0, 0, -1.37334, -1.27377, 0, 0, 0, 0, 0, 0, 0, -1.23229, -1.42122, 0, 0, 0, 0, 0, 0, 0, -1.05599, -1.527, 0, 0, 0, 0, 0, 0, 0, -0.693768, -1.51418, 0, 0, 0, 0, 0, 0, 0, -0.498232, -1.36673, 0, 0, 0, 0, 0, 0, 0, -0.344367, -1.0045, 0, 0, 0, 0, 0, 0, 0, -0.353984, -0.629458, 0, 0, 0, 0, 0, 0, 0, -0.365254, -0.32466, 0, 0, 0, 0, 0, 0, 0, -0.355577, 0.0809321),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 25

[sub_resource type="ImmediateMesh" id="ImmediateMesh_5p53w"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rxsi4"]
albedo_texture = ExtResource("3_g5h54")

[node name="VehicleTank" type="VehicleBody3D" node_paths=PackedStringArray("exit_point")]
center_of_mass_mode = 1
center_of_mass = Vector3(0, -1, 0)
script = ExtResource("1_44ovr")
exit_point = NodePath("ExitPoint")
IS_CONTROLLER = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.415892, 0)
shape = SubResource("BoxShape3D_for6x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.427288, 0)
mesh = SubResource("BoxMesh_17id2")

[node name="WheelFront_Left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.33515, -0.907605, 1.10311)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.99
suspension_stiffness = 50.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelFront_Left"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ybgag")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2cr6q")

[node name="WheelFront_Right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.335, -0.908, 1.103)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.99
suspension_stiffness = 50.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelFront_Right"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ybgag")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2cr6q")

[node name="WheelRear_Right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.335, -0.908, -1)
use_as_traction = true
wheel_roll_influence = 0.99
suspension_stiffness = 50.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelRear_Right"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ybgag")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2cr6q")

[node name="WheelRear_Left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.335, -0.908, -1)
use_as_traction = true
wheel_roll_influence = 0.99
suspension_stiffness = 50.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WheelRear_Left"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_ybgag")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_2cr6q")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, -4.15347e-08, 0.879931, 0.475102, 7.6926e-08, 0.475102, -0.879931, 0, 2.60131, -3.35829)

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.04761, 0)

[node name="ExitPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63772, -0.485097, 0.603241)

[node name="exit_time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MeshTrack_Left" type="MeshInstance3D" parent="." node_paths=PackedStringArray("path_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29979, 0, 0)
mesh = SubResource("ImmediateMesh_g5h54")
script = ExtResource("3_fmk3b")
path_node = NodePath("Path3D")
track_width = 0.575
track_height = 0.055
segment_length = 0.105
material = SubResource("StandardMaterial3D_hrmtn")
isDrawing = true

[node name="Path3D" type="Path3D" parent="MeshTrack_Left"]
curve = SubResource("Curve3D_fmk3b")

[node name="MeshTrack_Left2" type="MeshInstance3D" parent="." node_paths=PackedStringArray("path_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.36116, 0, 0)
mesh = SubResource("ImmediateMesh_5p53w")
script = ExtResource("5_hrmtn")
path_node = NodePath("Path3D")
track_width = 0.575
track_height = 0.055
segment_length = 0.105
material = SubResource("StandardMaterial3D_rxsi4")

[node name="Path3D" type="Path3D" parent="MeshTrack_Left2"]
curve = SubResource("Curve3D_fmk3b")

[connection signal="timeout" from="exit_time" to="." method="_on_exit_time_timeout"]
